docker/kube/myapp.yaml
##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productsrv
  labels:
    app: productsrv
    service: productsrv
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: productsrv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsrv-v1
  labels:
    app: productsrv
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsrv
      version: v1
  template:
    metadata:
      labels:
        app: productsrv
        version: v1
    spec:
      serviceAccountName: product_account
      containers:
      - name: product
        image: docker.io/brunopenso/istiodemo_product:1.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3001
---
##################################################################################################
# Product details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productdetailsrv
  labels:
    app: productdetailsrv
    service: productdetailsrv
spec:
  ports:
  - port: 3002
    name: http
  selector:
    app: productdetailsrv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productdetailsrv-v1
  labels:
    app: productdetailsrv
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productdetailsrv
      version: v1
  template:
    metadata:
      labels:
        app: productdetailsrv
        version: v1
    spec:
      serviceAccountName: productdetailsrv_account
      containers:
      - name: productdetailsrv
        image: docker.io/brunopenso/istiodemo_productdetail:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
